# Booldozer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  mingw-w64-x86_64.cmake  user_settings.json  vcpkg.json
.github/workflows/: build.yml  build_windows.yml
include/: DOL.hpp  DOM.hpp  DiscordIntegration.hpp  EditorScene.hpp  FrustumCull.h  GenUtil.hpp  GhostImg.hpp  ImGuiNotify.hpp  ImGuizmo.h  JmpIO.hpp  Model.hpp  ObserverIcon.hpp  Options.hpp  ProjectManager.hpp  ResUtil.hpp  TextEditor.h  TimeUtil.hpp  UGrid.hpp  UGridShader.h  UGridShader.hpp  UGridTex.h  UIUtil.hpp  UPathRenderer.hpp  UPlaneRenderer.hpp  UPointSpriteManager.hpp  border.h  constants.hpp  cube_shader_f.h  cube_shader_v.h  cube_tex.h  icon.h  imgui_neo_internal.h  imgui_neo_sequencer.h  intersect.h
include/DOM/: BGRenderDOMNode.hpp  BlackoutDOMNode.hpp  BooDOMNode.hpp  CameraAnimationDOMNode.hpp  CharacterDOMNode.hpp  DOMNodeBase.hpp  DoorDOMNode.hpp  EnemyDOMNode.hpp  EntityDOMNode.hpp  EventDOMNode.hpp  EventDataDOMNode.hpp  FurnitureDOMNode.hpp  GeneratorDOMNode.hpp  ItemAppearDOMNode.hpp  ItemFishingDOMNode.hpp  ItemInfoDOMNode.hpp  KeyDOMNode.hpp  MapCollisionDOMNode.hpp  MapDOMNode.hpp  MirrorDOMNode.hpp  ObjectDOMNode.hpp  ObserverDOMNode.hpp  PathDOMNode.hpp  RoomDOMNode.hpp  RoomDataDOMNode.hpp  SpeedySpiritDropDOMNode.hpp  TreasureTableDOMNode.hpp  UIRenderDOMNode.hpp
include/ImGuiFileDialog/: ImGuiFileDialog.h
include/history/: EditorHistory.hpp  Mat4HistoryItem.hpp  QuatHistoryItem.hpp  RoomBoundsHistoryItem.hpp  RoomMoveHistoryItem.hpp  Vec3HistoryItem.hpp
include/io/: BinIO.hpp  BloIO.hpp  BtiIO.hpp  CollisionIO.hpp  JmpIO.hpp  KeyframeIO.hpp  MdlIO.hpp  MdlIo.hpp  PrmIO.hpp  StaticMapDataIO.hpp  TxpIO.hpp  Util.hpp
include/modes/: ActorMode.hpp  BooMode.hpp  DoorMode.hpp  EditorModeBase.hpp  EditorSelection.hpp  EnemyMode.hpp  EventMode.hpp  ItemMode.hpp  PathMode.hpp
include/nlohmann/: json.hpp
include/scene/: Camera.hpp  EditorScene.hpp  ModelViewer.hpp
include/ui/: BloEditor.hpp  BooldozerApp.hpp  BooldozerEditor.hpp  BooldozerMainWindow.hpp  EditorWindowBase.hpp  EditorWindowMain.hpp  LInput.hpp
lib/: CMakeLists.txt  Makefile  cmake_install.cmake  imgui.cmake
patch/js_events/: patch.asm  required_symbols.ld
patch/map_extraction/: patch.asm  required_symbols.ld
res/: externalizemaps.patch  mirrors_map2.json  static_room_data.json
res/jmp_templates/: path.json
res/names/: ActorConfigs.json  ActorNames.json  MapNames.json  MapTitlecards.json  enemies.json  map1_rooms.json  map2_rooms.json
shaders/: fs_instancing.sc  varying.def.sc  vs_instancing.sc
src/: DOL.cpp  DiscordIntegration.cpp  EditorScene.cpp  GenUtil.cpp  ImGuiFileDialog.cpp  ImGuizmo.cpp  JmpIO.cpp  Model.cpp  Options.cpp  ProjectManager.cpp  ResUtil.cpp  Settings.cpp  TextEditor.cpp  UGrid.cpp  UIUtil.cpp  UPathRenderer.cpp  UPlaneRenderer.cpp  UPointSpriteManager.cpp  constants.cpp  imgui_neo_internal.cpp  imgui_neo_sequencer.cpp  main.cpp
src/DOM/: BGRenderDOMNode.cpp  BlackoutDOMNode.cpp  BooDOMNode.cpp  CameraAnimationDOMNode.cpp  CharacterDOMNode.cpp  DOMNodeBase.cpp  DoorDOMNode.cpp  EnemyDOMNode.cpp  EventDOMNode.cpp  EventDataDOMNode.cpp  FurnitureDOMNode.cpp  GeneratorDOMNode.cpp  ItemAppearDOMNode.cpp  ItemFishingDOMNode.cpp  ItemInfoDOMNode.cpp  KeyDOMNode.cpp  MapCollisionDOMNode.cpp  MapDOMNode.cpp  MirrorDOMNode.cpp  ObjectDOMNode.cpp  ObserverDOMNode.cpp  PathDOMNode.cpp  RoomDOMNode.cpp  RoomDataDOMNode.cpp  SpeedySpiritDropDOMNode.cpp  TreasureTableDOMNode.cpp  UIRenderDOMNode.cpp
src/history/: Mat4HistoryItem.cpp  QuatHistoryItem.cpp  RoomBoudsHistoryItem.cpp  RoomMoveHistoryItem.cpp  Vec3HistoryItem.cpp
src/io/: BinIO.cpp  BloIO.cpp  BtiIO.cpp  CollisionIO.cpp  JmpIO.cpp  KeyframeIO.cpp  MdlIO.cpp  MdlIo.cpp  PrmIO.cpp  StaticMapDataIO.cpp  TxpIO.cpp  Util.cpp
src/modes/: ActorMode.cpp  BooMode.cpp  DoorMode.cpp  EditorHistory.cpp  EditorSelection.cpp  EnemyMode.cpp  (+3 more)
(+28 files in other folders)
